--- a/examples/file-provider/all.yaml
+++ b/examples/file-provider/all.yaml
@@ -2,11 +2,11 @@
 http:
     routers:
         allBackendRouter:
-            rule: "Host(`localhost`)"
+            rule: "Host(`$MY_DOMAIN`)"
             service: allBackend
     services:
         allBackend:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:1111/"
-                    - url: "http://localhost:2222/"
+                    - url: "http://$MY_DOMAIN:1111/"
+                    - url: "http://$MY_DOMAIN:2222/"
