--- a/examples/file-provider/auth.yaml
+++ b/examples/file-provider/auth.yaml
@@ -1,7 +1,7 @@
 http:
     routers:
         allBackendRouter:
-            rule: "Host(`localhost`)"
+            rule: "Host(`$MY_DOMAIN`)"
             service: allBackend
         allBackendRouterSecured:
             entryPoints:
@@ -15,8 +15,8 @@ http:
         allBackend:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:1111/"
-                    - url: "http://localhost:2222/"
+                    - url: "http://$MY_DOMAIN:1111/"
+                    - url: "http://$MY_DOMAIN:2222/"
                 passHostHeader: false        
     middlewares:
         auth:
