--- a/examples/file-provider/blockadmin.yaml
+++ b/examples/file-provider/blockadmin.yaml
@@ -1,10 +1,10 @@
 http:
     routers:
         allBackendRouter:
-            rule: "Host(`localhost`)"
+            rule: "Host(`$MY_DOMAIN`)"
             service: allBackend
         adminblocker:
-            rule: "Host(`localhost`) && Path(`/admin`)"
+            rule: "Host(`$MY_DOMAIN`) && Path(`/admin`)"
             service: blackhole
     services:
         blackhole:
@@ -13,5 +13,5 @@ http:
         allBackend:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:1111/"
-                    - url: "http://localhost:2222/"
+                    - url: "http://$MY_DOMAIN:1111/"
+                    - url: "http://$MY_DOMAIN:2222/"
