--- a/examples/file-provider/split.yaml
+++ b/examples/file-provider/split.yaml
@@ -1,25 +1,25 @@
 http:
     routers:
         allbackendrouter:
-            rule: "Host(`localhost`) && Path(`/`)"
+            rule: "Host(`$MY_DOMAIN`) && Path(`/`)"
             service: allbackend
         app1router:
-            rule: "Host(`localhost`) && Path(`/app1`)"
+            rule: "Host(`$MY_DOMAIN`) && Path(`/app1`)"
             service: app1backend
         app2router:
-            rule: "Host(`localhost`) && Path(`/app2`)"
+            rule: "Host(`$MY_DOMAIN`) && Path(`/app2`)"
             service: app2backend
     services:
         app1backend:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:1111/"
+                    - url: "http://$MY_DOMAIN:1111/"
         app2backend:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:2222/"
+                    - url: "http://$MY_DOMAIN:2222/"
         allbackend:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:1111/"
-                    - url: "http://localhost:2222/"
+                    - url: "http://$MY_DOMAIN:1111/"
+                    - url: "http://$MY_DOMAIN:2222/"
