--- a/examples/file-provider/tls.yaml
+++ b/examples/file-provider/tls.yaml
@@ -1,7 +1,7 @@
 http:
     routers:
         secureBackendRouter:
-            rule: "Host(`knowledgecenter.pl`)"
+            rule: "Host(`$MY_DOMAIN`)"
             service: allBackend
             tls:
                 certResolver: myresolver
@@ -9,5 +9,5 @@ http:
         allBackend:
             loadBalancer:
                 servers:
-                    - url: "http://knowledgecenter.pl:1111/"
-                    - url: "http://knowledgecenter.pl:2222/"
+                    - url: "http://$MY_DOMAIN:1111/"
+                    - url: "http://$MY_DOMAIN:2222/"
