--- a/examples/file-provider/wrr.yaml
+++ b/examples/file-provider/wrr.yaml
@@ -1,7 +1,7 @@
 http:
     routers:
         allbackendrouter:
-            rule: "Host(`localhost`)"
+            rule: "Host(`$MY_DOMAIN`)"
             service: wrr
         
     services:
@@ -15,8 +15,8 @@ http:
         backend1:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:1111/"
+                    - url: "http://$MY_DOMAIN:1111/"
         backend2:
             loadBalancer:
                 servers:
-                    - url: "http://localhost:2222/"
+                    - url: "http://$MY_DOMAIN:2222/"
